--- a/bungee/config.yml
+++ b/bungee/config.yml
@@ -1,7 +1,7 @@
 enforce_secure_profile: false
 listeners:
 - query_port: 25577
-  motd: '&1Another Bungee server'
+  motd: '&1NORS'
   tab_list: GLOBAL_PING
   query_enabled: false
   proxy_protocol: false
@@ -45,6 +45,6 @@ disabled_commands:
 - disabledcommandhere
 servers:
   lobby:
-    motd: '&1Just another Waterfall - Forced Host'
+    motd: '&1NORS'
     address: localhost:25565
     restricted: false
